<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gio_hang_trong"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true">

    <!-- Giỏ hàng đang trống! -->

    <!-- angle-left -->

    <View
        android:id="@+id/vector"
        android:layout_width="220dp"
        android:layout_height="190dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="112dp"
        android:layout_centerVertical="true"
        android:background="@drawable/vector" />

    <TextView
        android:id="@+id/gi_h_ng_ang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vector"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/gi_h_ng_ang"
        android:textAppearance="@style/gi_h_ng_ang" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/angle_left"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/angle_left"
        android:clipToOutline="true" />
    <!-- Giỏ hàng -->
    <!-- Mua hàng ngay! -->

    <TextView
        android:id="@+id/gi_h_ng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="27dp"
        android:gravity="center_vertical"
        android:text="@string/gi_h_ng"
        android:textAppearance="@style/gi_h_ng" />

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="391dp"
        android:layout_height="55dp"
        android:layout_below="@+id/gi_h_ng_ang"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:background="@drawable/rectangle_3" />

    <TextView
        android:id="@+id/mua_h_ng_ng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/rectangle_3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/mua_h_ng_ng"
        android:textAppearance="@style/mua_h_ng_ng" />

    <Button
        android:id="@+id/btnNextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/vector"
        android:layout_marginLeft="-5dp"
        android:layout_marginTop="273dp"
        android:layout_toRightOf="@id/gi_h_ng"
        android:text="Chuyển trang" />
</RelativeLayout>